public/css/styles.css
body {
  background: url('images/background.png') repeat-y center top;
  color: white;
}

.clear {
  clear:both;
}

.homepage-logo {
  display: block;
  margin: 96px auto;
  width: 330px;
}

.homepage-menu {
  margin: 0 auto;
  padding: 0;
  width: 900px;
}

.homepage-menu li {
  display: inline-block;
  font-size: 1.8em;
  list-style-type: none;
  margin: 0 18px;
}

.homepage-menu li a {
  text-decoration: none;
}

.homepage-menu li a span {
  color: white;
  display: block;
  text-align: center;
}

.head-space { height: 28px; }

.top-menu {
  clear: both;
  display: block;
}

.side-menu {
  width: 220px;
  float: left;
}

.logo {
  display: inline;
  width: 210px;
  height: 140px;
}
.top-menu .logo { float: left; }

.top-menu .menu {
  display: block;
  margin: 0 0 0 210px;
  padding: 38px 0 0 40px;
}

.side-menu .menu {
  margin: 16px 0;
  padding: 0 0 0 40px;
}

.menu li {
  display: inline-block;
  font-size: 1.8em;
  list-style-type: none;
}
.top-menu .menu li {
  margin: 0 0 12px 64px;
}
.side-menu .menu li {
  margin: 0 0 24px 0;
}

.menu a {
  color: white;
  text-decoration: none;
  transition: color 0.5s;
}

.menu li a:hover {
  color: #999;
  transition: color 0.5s;
}

.left-col {
  float: left;
  width: 45%;
}

.right-col {
  margin-left: 45%;
}

.content-home { margin: 0 auto; width: 960px; }
.content {
  margin-left: 220px;
  width: 960px;
}

.content-header {
  height: 140px;
  margin: 12px 24px;
}

.content-header .info-box {
  padding: 4px; 
}

.content-header h1 {
  text-align: center;
}

.content-main {
  margin: 10px 24px;
}

.content-main .left-col img {
  border: 1px solid #222;
  margin: 0 10%;
  max-height: 300px;
  max-width: 330px;
}

.info-box {
  background-color: rgb(0, 174, 241);
  background-color: rgba(0, 174, 241, 0.4);
  border-radius: 12px;
  margin: 12px 0;
  padding: 10px;
}

.info-box h1 {
  margin: 4px 0;
}

.info-box p { 
  margin: 4px 2px 8px;
}

.content-secondary {
  clear: both;
  margin: 18px 24px;
  min-width: 720px;
  max-width: 960px;
}

.content-secondary h1 {
  margin: 0 12px;
}

.secondary-menu {
  padding: 0;
  text-align: center;
}

.secondary-menu li {
  display: inline-block;
  list-style-type: none;
  margin: 0 12px;
  max-width: 176px;
}

.secondary-menu li a {
  text-decoration: none;
}

.secondary-menu li a span {
  color: white;
  display: block;
  font-size: 1.2em;
  margin-top: 4px;
  text-align: center;
}

.content-secondary img {
  margin: 0 auto;
  max-height: 128px;
}

.product-slider img {
  border: 1px solid #777;
  box-shadow: 0 0 2px #333;
}

.bx-wrapper {
  margin: 0 auto 36px;
}

.bx-wrapper .bx-viewport {
  background: none;
  border: none;
  box-shadow: 0 0 0 #CCC;
  padding: 4px;
}

